# Notecard

./: .gitignore  LICENSE  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
.github/workflows/: release.yml
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: config.rs  crypto.rs  mod.rs
src-tauri/src/crypto/: mod.rs
src/components/Cards/: Card.tsx  CardActions.tsx  CardBody.tsx  CardPrimaryActions.tsx  CardSecondaryActions.tsx  Cards.css  CardsGrid.tsx  ColorPopup.tsx  SortableCard.tsx
src/components/Modal/: ConfirmModal.tsx  Modal.css  PasswordModal.tsx
src/components/Settings/: Settings.css  SettingsPanel.tsx
src/components/Sidebar/: GlobalLockStatus.tsx  Sidebar.css  Sidebar.tsx  TabItem.tsx  TabList.tsx
src/components/Titlebar/: FileMenu.tsx  Titlebar.css  Titlebar.tsx
src/components/Toast/: Toast.css  Toast.tsx
src/components/Toolbar/: Toolbar.css  Toolbar.tsx
src/components/Welcome/: Welcome.css  WelcomeScreen.tsx
src/hooks/: useSearchHighlight.ts  useTheme.ts  useToast.ts
src/lib/: DragProvider.tsx  dnd-sensor.ts  file_io.ts  i18n.ts  ncard-schema.ts
src/locales/: en.json  ja.json  zh-CN.json  zh-TW.json
src/stores/: useAppStore.ts  useFileStore.ts  useSettingsStore.ts  useUpdateStore.ts
src/styles/: global.css  variables.css
src/types/: app.ts  ncard.ts
